delete rows feat. add !redirect

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,6 +1,6 @@
 {
     "/public/js/app.js": "/public/js/app.js",
     "/public/css/app.css": "/public/css/app.css",
-    "/D:/OSPanel/domains/brainor-admin.local/public/packages/bradmin/js/app.js": "/D:/OSPanel/domains/brainor-admin.local/public/packages/bradmin/js/app.js",
-    "/D:/OSPanel/domains/brainor-admin.local/public/packages/bradmin/css/app.css": "/D:/OSPanel/domains/brainor-admin.local/public/packages/bradmin/css/app.css"
+    "/d:/OSPanel/domains/brainor-admin.local/public/packages/bradmin/js/app.js": "/d:/OSPanel/domains/brainor-admin.local/public/packages/bradmin/js/app.js",
+    "/d:/OSPanel/domains/brainor-admin.local/public/packages/bradmin/css/app.css": "/d:/OSPanel/domains/brainor-admin.local/public/packages/bradmin/css/app.css"
 }
